libs/pavex_macros/tests/constructor/fail/unreachable_pub.stderr
error: unreachable `pub` item
 --> tests/constructor/fail/unreachable_pub.rs:7:5
  |
7 |     pub fn a() -> A {
  |     ---^^^^^^^^^^^^
  |     |
  |     help: consider restricting its visibility: `pub(crate)`
  |
  = help: or consider exporting it for use by other crates
note: the lint level is defined here
 --> tests/constructor/fail/unreachable_pub.rs:6:5
  |
6 |     #[singleton(id = "A_")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^
  = note: this error originates in the attribute macro `singleton` (in Nightly builds, run with -Z macro-backtrace for more info)
